4492/fix/stretched book covers (#5172)
* Stop book cover image stretching
* Hug box shadow to book cover image at any image size
* Always centred book cover
* Stop book covers sizing larger than their max height 200px

--- a/static/css/components/book.less
+++ b/static/css/components/book.less
@@ -11,9 +11,16 @@
     }
   }
   .book-cover {
+    height: 200px;
+    display: flex;
+    align-items: center;
+
     img,
     a {
       display: block;
+    }
+    a {
+      margin: auto;
     }
   }
 
@@ -21,5 +28,7 @@
     margin: 0 auto;
     box-shadow: 1px 2px 5px 0 @book-cover-shadow-color;
     border-radius: 3px;
+    max-width: 100%;
+    max-height: 200px;
   }
 }
